--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,19 +1,12 @@
 pipeline {
-    agent any 
+    agent any
+    tools {
+        maven 'apache-maven-3.3.9'
+    }
     stages {
-        stage('Build') { 
+        stage('Build') {
             steps {
-                echo 'building' 
-            }
-        }
-        stage('Test') { 
-            steps {
-                echo 'testing'
-            }
-        }
-        stage('Deploy') { 
-            steps {
-                echo 'deploying'
+                sh 'mvn clean package'
             }
         }
     }
